--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Placeholder color for UI elements under development -->
+    <color name="placeholder_background">#FFE0E0E0</color> 
 </resources>
